--- a/doc/theoretical_results.lyx
+++ b/doc/theoretical_results.lyx
@@ -386,7 +386,8 @@ name "fig:PVQ-distortion-K"
 \end_layout
 
 \begin_layout Standard
-The high-rate distortion of a scalar quantizer is equal to 
+The high-rate distortion of a scalar quantizer of unit step size is equal
+ to 
 \begin_inset Formula $D_{s}=1/12$
 \end_inset
 
@@ -395,7 +396,7 @@ The high-rate distortion of a scalar quantizer is equal to
 \begin_inset Formula $N-1$
 \end_inset
 
- remaining dimensions should be
+ remaining dimensions should be the same as the scalar-quantized gain
 \begin_inset Formula 
 \begin{equation}
 D_{pvq}=\left(N-1\right)D_{s}=\frac{N-1}{12}\ .\label{eq:pvq_uniform}
@@ -451,7 +452,7 @@ D & =\left(\mathbf{X}-\hat{\mathbf{X}}\right)^{T}\left(\mathbf{X}-\hat{\mathbf{X
  & =\mathbf{X}^{T}\mathbf{X}+\hat{\mathbf{X}}^{T}\hat{\mathbf{X}}-2\hat{\mathbf{X}}^{T}\mathbf{X}\nonumber \\
  & =g^{2}+\hat{g}^{2}-2g\hat{g}\mathbf{z}\hat{\mathbf{z}}\nonumber \\
  & =\left(g-\hat{g}\right)^{2}-2g\hat{g}-2g\hat{g}\mathbf{z}\hat{\mathbf{z}}\nonumber \\
- & =\left(g-\hat{g}\right)^{2}-g\hat{g}\left(2-2\mathbf{z}\hat{\mathbf{z}}\right)\ .\label{eq:distance_v1}
+ & =\left(g-\hat{g}\right)^{2}+g\hat{g}\left(2-2\mathbf{z}\hat{\mathbf{z}}\right)\ .\label{eq:distance_v1}
 \end{align}
 
 \end_inset
@@ -499,7 +500,7 @@ reference "eq:distance_v1"
  as
 \begin_inset Formula 
 \begin{equation}
-D=\left(g-\hat{g}\right)^{2}-g\hat{g}D_{z}\ ,\label{eq:pvq_distortion}
+D=\left(g-\hat{g}\right)^{2}+g\hat{g}D_{z}\ ,\label{eq:pvq_distortion}
 \end{equation}
 
 \end_inset
@@ -627,7 +628,7 @@ reference "eq:pvq_distortion"
 , we obtain
 \begin_inset Formula 
 \begin{equation}
-D=\left(g-\hat{g}\right)^{2}-g\hat{g}\left(D_{\theta}+\sin\theta\sin\hat{\theta}D_{x}\right)\ .\label{eq:total_pvq_theta_dist}
+D=\left(g-\hat{g}\right)^{2}+g\hat{g}\left(D_{\theta}+\sin\theta\sin\hat{\theta}D_{x}\right)\ .\label{eq:total_pvq_theta_dist}
 \end{equation}
 
 \end_inset
